# logicallyUQD

./: .gitignore  README.md  Timetag Calibration Data1.txt  pyproject.toml  setup.py
opt/: README.md
src/logicallyUQD/: __init__.py  _lib.pxd  _lib.py  _lib.pyi  bindings_uqd_logic.cpp  bindings_uqd_logic.h
tests/: basics.py  bitmask.py  logic-mode.py
