[project]
name = "logicallyUQD"
version = "0.2.0"
description = ""
authors = [
    {name = "Peter Thomas Barrow", email = "peter.barrow.93@gmail.com"}
]
maintainers = [
    {name = "Peter Thomas Barrow", email = "peter.barrow.93@gmail.com"}
]
readme = "README.md"
keywords = []
license = {text = "GPLv2"}
dependencies = [
    "numpy>=2.0.0",
]

[build-system]
requires = ["setuptools", "wheel", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[tool.bumpversion]
current_version = "0.2.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = true
commit = false
message = "Bump version: {current_version} → {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "{current_version}"

[[tool.bumpversion.files]]
filename = "./src/logicallyUQD/__version__.py"
search = "{current_version}"
